fix overlapping bg

--- a/assets/less/visage.less
+++ b/assets/less/visage.less
@@ -1016,7 +1016,7 @@ i.red {
   top: -10px;
 
   @media screen and (min-width: 768px){
-    transform: scaleY(2);
+    transform: scaleY(1.5);
   }
   @media screen and (max-width: 767px){
     right: 0;
